# MeepoEmbedding

./: .bazelrc  .clang-format  .gitignore  BUILD  CPPLINT.cfg  MANIFEST.in  MODULE.bazel  README.md  dev.md  setup.py
.github/workflows/: ci_test.yml
docs/docs_ch/: design.md
docs/docs_en/: design.md
meepo_embedding/: meepo_embedding.bzl  version.py
meepo_embedding/include/: dep_rules.bzl
meepo_embedding/include/common/: data_type.h  device_base.h  logger.h  macros.h  mutex.h  status.h  strings.h  tensor.h  type_index.h
meepo_embedding/include/framework/: bfc_allocator.hpp  context.hpp  memory_resource.hpp  rendezvous_agent.hpp  resource_base.hpp  resource_mgr.hpp
meepo_embedding/include/storage/register/: BUILD  storage_interface.hpp  storage_interface_eigen.bak.hpp  storage_registration.hpp  storage_registry.hpp
meepo_embedding/src/common/: BUILD  logger.cpp  strings.cpp
meepo_embedding/src/framework/: bfc_allocator.cpp  rendezvous_agent.cpp  rendezvous_agent_test.cpp  resource_mgr.cpp
meepo_embedding/src/storage/hkv/: hkv_interface.cpp
meepo_embedding/src/storage/register/: BUILD  storage_registry.cpp  storage_registry_test.cpp
tools/install_deps/: buildifier.sh  clang-format.sh  install_bazelisk.sh  pytest.txt
